--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     <title>환경을 살리는 소비 'JUNKY FUNKY!'</title>
   </head>
   <body>
+    <!-- 김송희 -->
     <div class="wrap">
       <!-- 헤더 영역 -->
       <header class="header">
