--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <script src="js/material.js"></script>
     <script src="js/rookie_brand.js"></script>
     <script src="js/review.js"></script>
+    <script src="js/notice.js"></script>
     <!-- css -->
     <link rel="stylesheet" href="css/header.css" />
     <title>환경을 살리는 소비 'JUNKY FUNKY!'</title>
@@ -57,10 +58,6 @@
         <div class="container">
           <ul class="head-navi">
             <div class="navi-cate">
-              <!-- <div class="cate-left">
-                <img src="images/A/icon/submenu-icon/tech-electronics.svg" alt="카테고리 아이콘" />
-                <span>카테고리</span>
-              </div> -->
               <div class="cate-right">
                 <ul class="depth-top">
                   <!-- <li class="cate-title">소재별</li> -->
@@ -95,46 +92,6 @@
                     </a>
                   </li>
                 </ul>
-                <!-- <hr> -->
-                <!-- <ul class="depth-bottom">
-                  <p class="cate-title">품목별</p>
-                  <li>
-                    <a href="#">
-                      <img src="images/A/icon/submenu-icon/accessories.svg" alt="잡화">
-                      <span>잡화</span>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <img src="images/A/icon/submenu-icon/fashion.svg" alt="의류">
-                      <span>의류</span>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <img src="images/A/icon/submenu-icon/home-living.svg" alt="홈/리빙">
-                      <span>홈/리빙</span>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <img src="images/A/icon/submenu-icon/perfumes-cosmetics.svg" alt="향수/뷰티">
-                      <span>향수/뷰티</span>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <img src="images/A/icon/submenu-icon/jewerly.svg" alt="주얼리">
-                      <span>주얼리</span>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <img src="images/A/icon/submenu-icon/charactor-goods.svg" alt="캐릭터/굿즈">
-                      <span>캐릭터/굿즈</span>
-                    </a>
-                  </li>
-                </ul> -->
               </div>
             </div>
             <li>
@@ -174,56 +131,16 @@
                         </a>
                       </li>
                     </ul>
-                    <!-- <hr> -->
-                    <!-- <ul class="depth-bottom">
-                      <p class="cate-title">품목별</p>
-                      <li>
-                        <a href="#">
-                          <img src="images/A/icon/submenu-icon/accessories.svg" alt="잡화">
-                          <span>잡화</span>
-                        </a>
-                      </li>
-                      <li>
-                        <a href="#">
-                          <img src="images/A/icon/submenu-icon/fashion.svg" alt="의류">
-                          <span>의류</span>
-                        </a>
-                      </li>
-                      <li>
-                        <a href="#">
-                          <img src="images/A/icon/submenu-icon/home-living.svg" alt="홈/리빙">
-                          <span>홈/리빙</span>
-                        </a>
-                      </li>
-                      <li>
-                        <a href="#">
-                          <img src="images/A/icon/submenu-icon/perfumes-cosmetics.svg" alt="향수/뷰티">
-                          <span>향수/뷰티</span>
-                        </a>
-                      </li>
-                      <li>
-                        <a href="#">
-                          <img src="images/A/icon/submenu-icon/jewerly.svg" alt="주얼리">
-                          <span>주얼리</span>
-                        </a>
-                      </li>
-                      <li>
-                        <a href="#">
-                          <img src="images/A/icon/submenu-icon/charactor-goods.svg" alt="캐릭터/굿즈">
-                          <span>캐릭터/굿즈</span>
-                        </a>
-                      </li>
-                    </ul> -->
                   </div>
                 </div>
               </a>
             </li>
             <li><a href="#">카테고리</a></li>
-            <li><a href="#">공지사항</a></li>
-            <li><a href="#">이벤트</a></li>
-            <li><a href="#">구독</a></li>
+            <li><a href="#">소개</a></li>
             <li><a href="#">브랜드</a></li>
+            <li><a href="#">쿠폰</a></li>
             <li><a href="#">리뷰</a></li>
+            <li><a href="#">소식</a></li>
           </ul>
           <div class="head-logo">
             <a href="#">
@@ -300,7 +217,7 @@
       <!-- 루키 브랜드 -->
       <section class="rookie-brands">
         <div class="rookie_container">
-          <h2 class="section-title">소재별 카테고리</h2>
+          <h2 class="section-title">지금 주목받는 루키 브랜드</h2>
           <a href="#" class="more-link">더 보기</a>
           <div class="brand-grid">
             <!-- 브랜드 아이템 1: 바다 한 조각 -->
@@ -643,10 +560,12 @@
       <section class="coupon-section">
         <div class="coupon_container">
           <h2 class="section-title">이달의 쿠폰</h2>
-          <a href="#"><img src="images/B/coupon/1920_coupon1.png" alt="쿠폰"></a>
-          <a href="#"><img src="images/B/coupon/1920_coupon2.png" alt="쿠폰"></a>
-          <a href="#"><img src="images/B/coupon/1920_coupon3.png" alt="쿠폰"></a>
-          <a href="#"><img src="images/B/coupon/1920_coupon4.png" alt="쿠폰"></a>
+          <div class="coupon-list">
+            <a href="login.html"><img src="images/B/coupon/1920_coupon1.png" alt="쿠폰" /></a>
+            <a href="login.html"><img src="images/B/coupon/1920_coupon2.png" alt="쿠폰" /></a>
+            <a href="login.html"><img src="images/B/coupon/1920_coupon3.png" alt="쿠폰" /></a>
+            <a href="login.html"><img src="images/B/coupon/1920_coupon4.png" alt="쿠폰" /></a>
+          </div>
         </div>
       </section>
       <!-- 인기 아이템-->
@@ -657,28 +576,34 @@
           <!-- 제품 그리드 -->
           <div class="product-grid">
             <!-- 1번 상품 -->
-            <div class="product-item">
-              <div class="ranking-badge">순위<br />1</div>
+            <a href="#" class="product-item">
+              <div class="ranking-badge"><br />1위</div>
               <img src="images/product images/pd_img (1).png" alt="모어포 모레 플라스틱 비누받침" class="product-image" />
-              <p class="product-brand">모어포 모레</p>
-              <p class="product-name">플라스틱 비누받침</p>
-              <p class="product-price">21,000원</p>
-              <img src="images/A/icon/section-icon/rating-icon.png" alt="별점" class="rating-icon" />
-              <p class="review-count">(11,347)</p>
-            </div>
+              <div class="priduct-text">
+                <p class="product-brand">모어포 모레</p>
+                <p class="product-name">플라스틱 비누받침</p>
+                <p class="product-price">21,000원</p>
+                <div class="product-item_materal-rating">
+                  <img src="images/A/icon/section-icon/rating-icon.png" alt="별점" class="rating-icon" />
+                  <p class="review-count">(11,347)</p>
+                </div>
+              </div>
+            </a>
+
             <!-- 2번 상품 -->
             <div class="product-item">
-              <div class="ranking-badge">순위<br />2</div>
+              <div class="ranking-badge"><br />2위</div>
               <img src="images/product images/pd_img (22).png" alt="ODD.CALENDAR 2024" class="product-image" />
               <p class="product-brand">ODD.TRAIN</p>
               <p class="product-name">ODD. CALENDAR 2024</p>
               <p class="product-price">56,000원</p>
+              <div></div>
               <img src="images/A/icon/section-icon/rating-icon.png" alt="별점" class="rating-icon" />
               <p class="review-count">(8,856)</p>
             </div>
             <!-- 3번 상품 -->
             <div class="product-item">
-              <div class="ranking-badge">순위<br />3</div>
+              <div class="ranking-badge"><br />3위</div>
               <img src="images/product images/pd_img (17).png" alt="거북이 보틀 오프너" class="product-image" />
               <p class="product-brand">피그랩</p>
               <p class="product-name">거북이 보틀 오프너</p>
@@ -688,7 +613,7 @@
             </div>
             <!-- 4번 상품 -->
             <div class="product-item">
-              <div class="ranking-badge">순위<br />4</div>
+              <div class="ranking-badge"><br />4위</div>
               <img src="images/product images/pd_img (16).png" alt="리사이클 유리팔찌" class="product-image" />
               <p class="product-brand">유리노리</p>
               <p class="product-name">리사이클 유리팔찌</p>
@@ -698,7 +623,7 @@
             </div>
             <!-- 5번 상품 -->
             <div class="product-item">
-              <div class="ranking-badge">순위<br />5</div>
+              <div class="ranking-badge"><br />5위</div>
               <img src="images/product images/pd_img (11).png" alt="헌의류 곱창밴드" class="product-image" />
               <p class="product-brand">DABOK</p>
               <p class="product-name">헌의류 곱창밴드</p>
@@ -708,7 +633,7 @@
             </div>
             <!-- 6번 상품 -->
             <div class="product-item">
-              <div class="ranking-badge">순위<br />6</div>
+              <div class="ranking-badge"><br />6위</div>
               <img src="images/product images/pd_img (10).png" alt="양말 목 체커보드백" class="product-image" />
               <p class="product-brand">프로젝트 노하우</p>
               <p class="product-name">양말 목 체커보드백</p>
@@ -718,7 +643,7 @@
             </div>
             <!-- 7번 상품 -->
             <div class="product-item">
-              <div class="ranking-badge">순위<br />7</div>
+              <div class="ranking-badge"><br />7위</div>
               <img src="images/product images/pd_img (9).png" alt="폐목 우드 트레이" class="product-image" />
               <p class="product-brand">비비작 공작소</p>
               <p class="product-name">폐목 우드 트레이</p>
@@ -728,7 +653,7 @@
             </div>
             <!-- 8번 상품 -->
             <div class="product-item">
-              <div class="ranking-badge">순위<br />8</div>
+              <div class="ranking-badge"><br />8위</div>
               <img src="images/product images/pd_img (15).png" alt="플라스틱 책선반" class="product-image" />
               <p class="product-brand">로샤드 스튜디오</p>
               <p class="product-name">플라스틱 책선반</p>
@@ -787,27 +712,55 @@
       <!-- 바로가기 -->
       <section class="notice_banner">
         <div class="notice_container">
-            <h2 class="section-title">정키펑키 바로 가기</h2>
-          <ul class="notice_content">
-            <!-- notice1 -->
-            <li><img src="images/B/e.banner/1920_notice1.png" alt="구독" /></li>
-            <li><p class="notice_title">정키펑키 구독 이벤트</p></li>
-            <li>
-              <p>구독해주신 모든 분들께 <br />첫 구매 20% 할인쿠폰 지급</p>
-            </li>
-            <!-- notice2 -->
-            <li><img src="images/B/e.banner/1920_notice2.png" alt="구독" /></li>
-            <li><p class="notice_title">새로운 소식 & 자주 묻는 질문</p></li>
-            <li><p>정키펑키 소식은 이곳에서 확인해요~</p></li>
-            <!-- notice2 -->
-            <li><img src="images/B/e.banner/1920_notice3.png" alt="구독" /></li>
-            <li><p class="notice_title">첫 리뷰에 포인트 두배!</p></li>
-            <li>
-              <p>첫 리뷰 작성시 <br />텍스트 리뷰 600P ,포토 리뷰 1000P지급</p>
-            </li>
-          </ul>
+          <h2 class="section-title">정키펑키 소식</h2>
+          <div class="swiper notice_swiper">
+            <div class="swiper-wrapper">
+              <!-- notice1 -->
+              <div class="swiper-slide notice-swiper-slide">
+                <a href="#">
+                  <img src="images/B/e.banner/1920_notice1.png" alt="구독" />
+                  <p class="notice_title">정키펑키 구독 이벤트</p>
+                  <p class="notice_text">구독시 첫 구매 20% 할인쿠폰 지급</p>
+                </a>
+              </div>
+              <!-- notice2 -->
+              <div class="swiper-slide notice-swiper-slide">
+                <a href="#">
+                  <img src="images/B/e.banner/1920_notice2.png" alt="구독" />
+                  <p class="notice_title">새로운 소식 & 자주 묻는 질문</p>
+                  <p class="notice_text">정키펑키 소식은 이곳에서 확인해요~</p>
+                </a>
+              </div>
+              <!-- notice3 -->
+              <div class="swiper-slide notice-swiper-slide">
+                <a href="#">
+                  <img src="images/B/e.banner/1920_notice3.png" alt="구독" />
+                  <p class="notice_title">첫 리뷰에 포인트 두배!</p>
+                  <p class="notice_text">텍스트리뷰 600P, 포토리뷰 1000P 지급</p>
+                </a>
+              </div>
+              <!-- notice4 -->
+              <div class="swiper-slide notice-swiper-slide">
+                <a href="#">
+                  <img src="images/B/e.banner/1920_notice1.png" alt="구독" />
+                  <p class="notice_title">정키펑키 구독 이벤트</p>
+                  <p class="notice_text">구독시 첫 구매 20% 할인쿠폰 지급</p>
+                </a>
+              </div>
+              <!-- notice5 -->
+              <div class="swiper-slide notice-swiper-slide">
+                <a href="#">
+                  <img src="images/B/e.banner/1920_notice2.png" alt="구독" />
+                  <p class="notice_title">새로운 소식 & 자주 묻는 질문</p>
+                  <p class="notice_text">정키펑키 소식은 이곳에서 확인해요~</p>
+                </a>
+              </div>
+              <!-- 슬라이드 끝-->
+            </div>
+          </div>
         </div>
       </section>
+
       <!-- 푸터 영역-->
       <footer class="footer">
         <div class="footer-container">
