푸터 반응형

--- a/index.html
+++ b/index.html
@@ -978,7 +978,7 @@
           <div class="footer-left">
             <p>&copy; inter JUNKYFUNKY System B.V 1999 - 2024</p>
             <img class="logo" src="images/A/footer/ft_logo.png" alt="푸터 로고" />
-            <p>주소: (유) 경기도 광명시 일직로 17, 1층 (역직동) 정키퍼키 본점</p>
+            <p>주소: (유) 경기도 광명시 일직로 17, 1층 (역직동) 정키펑키 본점</p>
             <p>사업자 등록번호: 106-84-7765</p>
             <p>대표자: 김홍도</p>
             <p>통신판매업 신고: 2024-경기광명-1184</p>
