--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <script src="js/banner.js"></script>
     <script src="js/modal.js"></script>
     <script src="js/fix-btn.js"></script>
-    <script src="js/video.js"></script>
+    <script src="js/detail.js"></script>
     <!-- css -->
     <link rel="stylesheet" href="css/main.css" />
     <title>B안 JUNKY FUNKY</title>
@@ -828,6 +828,9 @@
                 <img src="images/A/icon/section-icon/rating-icon.svg" alt="별점" />
                 <span>(11,347)</span>
               </div>
+              <div class="add-to-cart">
+                <img src="images/like/cart_plus.png" alt="장바구니에 담기" class="add-icon cart-icon" data-product-name="모어포 모레 플라스틱 비누받침" data-price="21000" />
+              </div>
             </div>
             <!-- 2번 상품 -->
             <div class="product-item" data-aos="fade-up" data-aos-delay="100">
@@ -839,6 +842,9 @@
               <div class="popular-rating">
                 <img src="images/A/icon/section-icon/rating-icon.svg" alt="별점" />
                 <span>(11,347)</span>
+              </div>
+              <div class="add-to-cart">
+                <img src="images/like/cart_plus.png" alt="장바구니에 담기" class="add-icon cart-icon" data-product-name="모어포 모레 플라스틱 비누받침" data-price="21000" />
               </div>
             </div>
             <!-- 3번 상품 -->
@@ -852,6 +858,9 @@
                 <img src="images/A/icon/section-icon/rating-icon.svg" alt="별점" />
                 <span>(11,347)</span>
               </div>
+              <div class="add-to-cart">
+                <img src="images/like/cart_plus.png" alt="장바구니에 담기" class="add-icon cart-icon" data-product-name="모어포 모레 플라스틱 비누받침" data-price="21000" />
+              </div>
             </div>
             <!-- 4번 상품 -->
             <div class="product-item" data-aos="fade-up" data-aos-delay="300">
@@ -863,6 +872,9 @@
               <div class="popular-rating">
                 <img src="images/A/icon/section-icon/rating-icon.svg" alt="별점" />
                 <span>(11,347)</span>
+              </div>
+              <div class="add-to-cart">
+                <img src="images/like/cart_plus.png" alt="장바구니에 담기" class="add-icon cart-icon" data-product-name="모어포 모레 플라스틱 비누받침" data-price="21000" />
               </div>
             </div>
             <!-- 5번 상품 -->
@@ -876,6 +888,9 @@
                 <img src="images/A/icon/section-icon/rating-icon.svg" alt="별점" />
                 <span>(11,347)</span>
               </div>
+              <div class="add-to-cart">
+                <img src="images/like/cart_plus.png" alt="장바구니에 담기" class="add-icon cart-icon" data-product-name="모어포 모레 플라스틱 비누받침" data-price="21000" />
+              </div>
             </div>
             <!-- 6번 상품 -->
             <div class="product-item" data-aos="fade-up" data-aos-delay="500">
@@ -887,6 +902,9 @@
               <div class="popular-rating">
                 <img src="images/A/icon/section-icon/rating-icon.svg" alt="별점" />
                 <span>(11,347)</span>
+              </div>
+              <div class="add-to-cart">
+                <img src="images/like/cart_plus.png" alt="장바구니에 담기" class="add-icon cart-icon" data-product-name="모어포 모레 플라스틱 비누받침" data-price="21000" />
               </div>
             </div>
             <!-- 7번 상품 -->
@@ -900,6 +918,9 @@
                 <img src="images/A/icon/section-icon/rating-icon.svg" alt="별점" />
                 <span>(11,347)</span>
               </div>
+              <div class="add-to-cart">
+                <img src="images/like/cart_plus.png" alt="장바구니에 담기" class="add-icon cart-icon" data-product-name="모어포 모레 플라스틱 비누받침" data-price="21000" />
+              </div>
             </div>
             <!-- 8번 상품 -->
             <div class="product-item" data-aos="fade-up" data-aos-delay="700">
@@ -911,6 +932,9 @@
               <div class="popular-rating">
                 <img src="images/A/icon/section-icon/rating-icon.svg" alt="별점" />
                 <span>(11,347)</span>
+              </div>
+              <div class="add-to-cart">
+                <img src="images/like/cart_plus.png" alt="장바구니에 담기" class="add-icon cart-icon" data-product-name="모어포 모레 플라스틱 비누받침" data-price="21000" />
               </div>
             </div>
           </div>
