동영상 안나오는 문제 수정

--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
                         <li><a href="notice.html">공지사항</a></li>
                       </ul>
                     </div>
-                    <hr />
                     <div class="side-bottom">
+                      <hr />
                       <h3 class="side-bottom-title">카테고리</h3>
                       <ul class="side-bottom-menu">
                         <li>
@@ -252,7 +252,7 @@
               <!-- <li><a href="#">구독</a></li> -->
               <li><a href="#brands">브랜드</a></li>
               <li><a href="#review">리뷰</a></li>
-              <li><a href="#">소개</a></li>
+              <li><a href="about_us.html">소개</a></li>
               <li><a href="notice.html">공지사항</a></li>
             </ul>
             <div class="head-logo">
@@ -297,7 +297,7 @@
               <!-- <li><a href="#">구독</a></li> -->
               <li><a href="#brands">브랜드</a></li>
               <li><a href="#review">리뷰</a></li>
-              <li><a href="#">소개</a></li>
+              <li><a href="about_us.html">소개</a></li>
               <li><a href="notice.html">공지사항</a></li>
             </ul>
           </div>
@@ -340,7 +340,7 @@
       <!-- 메인 영역 시작 -->
 
       <!-- 루키 브랜드 -->
-      <section class="rookie-brands">
+      <section class="rookie-brands" id="brands">
         <div class="rookie_container">
           <h2 class="section-title">지금 주목받는 루키 브랜드</h2>
           <a href="#" class="more-link">더 보기</a>
@@ -400,7 +400,7 @@
         </div>
       </section>
       <!-- 쿠폰 -->
-      <section class="coupon-section">
+      <section class="coupon-section" id="event">
         <div class="coupon_container">
           <h2 class="section-title">이달의 쿠폰</h2>
           <div class="coupon-list">
@@ -432,31 +432,31 @@
             <div class="swiper-wrapper">
               <div class="swiper-slide">
                 <a href="#">
-                  <img src="images/B/icon/submenu-icon/plastic.png" alt="plastic" />
+                  <img src="images/B/icon/submenu-icon/plastic.svg" alt="plastic" />
                   <p>플라스틱</p>
                 </a>
               </div>
               <div class="swiper-slide">
                 <a href="#">
-                  <img src="images/B/icon/submenu-icon/clothes.png" alt="clothes" />
+                  <img src="images/B/icon/submenu-icon/clothes.svg" alt="clothes" />
                   <p>천</p>
                 </a>
               </div>
               <div class="swiper-slide">
                 <a href="#">
-                  <img src="images/B/icon/submenu-icon/wood.png" class="scale" alt="wood" />
+                  <img src="images/B/icon/submenu-icon/wood.svg" class="scale" alt="wood" />
                   <p>목재</p>
                 </a>
               </div>
               <div class="swiper-slide">
                 <a href="#">
-                  <img src="images/B/icon/submenu-icon/glass.png" alt="glass" />
+                  <img src="images/B/icon/submenu-icon/glass.svg" alt="glass" />
                   <p>유리</p>
                 </a>
               </div>
               <div class="swiper-slide">
                 <a href="#">
-                  <img src="images/B/icon/submenu-icon/etc.png" class="scale" alt="etc" />
+                  <img src="images/B/icon/submenu-icon/etc.svg" class="scale" alt="etc" />
                   <p>기타</p>
                 </a>
               </div>
@@ -811,7 +811,7 @@
         </div>
       </div>
       <!-- 인기 아이템-->
-      <section class="popular-items-section">
+      <section class="popular-items-section" id="popular">
         <div class="container">
           <h2 class="section-title">인기 아이템</h2>
           <a href="#" class="more-link">더 보기</a>
@@ -941,7 +941,7 @@
         </div>
       </section>
       <!-- 리뷰 영역 -->
-      <section class="review-section">
+      <section class="review-section" id="review">
         <div class="review-container">
           <h2 class="section-title">정키펑키 유저 리뷰</h2>
           <!-- 스와이퍼 슬라이더 -->
