--- a/detail-page.html
+++ b/detail-page.html
@@ -290,6 +290,7 @@
       </header>
       <section class="detile-page">
         <div class="detile_container">
+          <!-- 메인상품이미지역역 -->
           <div class="breadcrumb">홈 > 카테고리 > 유리</div>
           <div class="product-container">
             <div class="product-main">
@@ -301,29 +302,39 @@
                   <span class="product-old-price">39,000원</span>
                   <span class="product-new-price">35,000원</span>
                 </p>
-  
-                <p class="product-shipping-info">배송정보: 영업일 기준으로 2-3일 소요됩니다.</p>
+
+                <p class="product-shipping-info">배송정보 : 영업일 기준으로 2-3일 소요됩니다.</p>
                 <p class="product-shipping-cost">
-                  배송비: <span>3,000원</span> <br />5만원 이상 구매 시 무료배송
+                  배송비 : <span class="shipping-cost">3,000원</span> <br />
+                  <span class="shipping-cost-info">5만원 이상 구매 시 무료배송</span>
                 </p>
               </div>
             </div>
-
           </div>
           <!-- 상품소개/브랜드 -->
-          <!-- 상품소개페이지 -->
+          <!-- 탭 버튼 -->
           <div class="tab-container">
-            <button class="tab-button" onclick="showTab('description')">상품 설명</button>
-            <button class="tab-button" onclick="showTab('brand')">브랜드 소개</button>
+            <div class="tab-container-line">
+              <button class="tab-button">상품 설명</button>
+            </div>
+            <div class="tab-container-line">
+              <button class="tab-button">브랜드 소개</button>
+            </div>
           </div>
 
+          <!-- 상품 설명 탭 내용 -->
           <div class="tab-content" id="description">
-            <img src="images/detail/suncatcher.png" alt="상품설명" />
-          </div>
-
-          <div class="tab-content" id="brand" style="display: none">
-            <h2>브랜드 소개</h2>
-            <img src="images/detail/suncatcher-brand.png" alt="브랜드" />
+            <!-- 이미지 기본 표시 (일부만 보이게 설정) -->
+            <div class="image-container card">
+              <img src="images/detail/suncatcher.png" alt="상품설명" id="mainImage" />
+            </div>
+            <div class="image-brand card">
+              <img src="images/detail/suncatcher-brand.png" alt="브랜드" id="detailImage"  />
+            </div>
+            <div class="content">
+              <!-- 더보기 버튼 -->
+              <button id="loadMoreImageBtn" onclick="toggleMoreImage()">더보기</button>
+            </div>
           </div>
         </div>
       </section>
