소개 링크 삽입, notice 삽입

--- a/notice copy.html
+++ b/notice copy.html
@@ -229,7 +229,7 @@
                       <li><a href="index.html#popular">인기</a></li>
                       <li><a href="index.html#brands">브랜드</a></li>
                       <li><a href="index.html#review">리뷰</a></li>
-                      <!-- <li><a href="notice.html">공지사항</a></li> -->
+                      <li><a href="notice copy.html">공지사항</a></li>
                     </ul>
                   </div>
                   <hr />
@@ -315,7 +315,7 @@
             <li><a href="index.html#brands">브랜드</a></li>
             <li><a href="index.html#review">리뷰</a></li>
             <li><a href="about_us.html">소개</a></li>
-            <!-- <li><a href="notice.html">공지사항</a></li> -->
+            <li><a href="notice copy.html">공지사항</a></li>
           </ul>
           <div class="head-logo">
             <a href="index.html">
@@ -359,7 +359,7 @@
             <li><a href="index.html#brands">브랜드</a></li>
             <li><a href="index.html#review">리뷰</a></li>
             <li><a href="about_us.html">소개</a></li>
-            <!-- <li><a href="notice.html">공지사항</a></li> -->
+            <li><a href="notice copy.html">공지사항</a></li>
           </ul>
         </div>
       </div>
