--- a/about_us.html
+++ b/about_us.html
@@ -135,7 +135,7 @@
                         <li><a href="index.html#popular">인기</a></li>
                         <li><a href="index.html#brands">브랜드</a></li>
                         <li><a href="index.html#review">리뷰</a></li>
-                        <li><a href="notice.html">공지사항</a></li>
+                        <li><a href="notice copy.html">공지사항</a></li>
                       </ul>
                     </div>
                     <hr />
@@ -221,7 +221,7 @@
               <li><a href="index.html#brands">브랜드</a></li>
               <li><a href="index.html#review">리뷰</a></li>
               <li><a href="#">소개</a></li>
-              <li><a href="notice.html">공지사항</a></li>
+              <li><a href="notice copy.html">공지사항</a></li>
             </ul>
             <div class="head-logo">
               <a href="index.html">
