텍스트 정렬

--- a/detail-page.html
+++ b/detail-page.html
@@ -291,47 +291,47 @@
       <section class="detile-page">
         <div class="detile_container">
           <!-- 메인상품이미지역역 -->
-          <div class="breadcrumb">홈 > 카테고리 > 유리</div>
-          <div class="product-container">
-            <div class="product-main">
+          <div class="detile-breadcrumb">홈 > 카테고리 > 유리</div>
+          <div class="detile-product-container">
+            <div class="detile-product-main">
               <img src="images/detail/pd_img (12).png" alt="바다 유리 선캐쳐" />
-              <p class="product-brand">바다 한 조각</p>
-              <div class="product-info">
+              <p class="detile-product-brand">바다 한 조각</p>
+              <div class="detile-product-info">
                 <h1>바다 유리 선캐쳐</h1>
-                <p class="product-price">
-                  <span class="product-old-price">39,000원</span>
-                  <span class="product-new-price">35,000원</span>
+                <p class="detile-product-price">
+                  <span class="detile-product-old-price">39,000원</span>
+                  <span class="detile-product-new-price">35,000원</span>
                 </p>
 
-                <p class="product-shipping-info">배송정보 : 영업일 기준으로 2-3일 소요됩니다.</p>
-                <p class="product-shipping-cost">
-                  배송비 : <span class="shipping-cost">3,000원</span> <br />
-                  <span class="shipping-cost-info">5만원 이상 구매 시 무료배송</span>
+                <p class="detile-product-shipping-info">배송정보 : 영업일 기준으로 2-3일 소요됩니다.</p>
+                <p class="detile-product-shipping-cost">
+                  배송비 : <span class="detile-shipping-cost">3,000원</span> <br />
+                  <span class="detile-shipping-cost-info">5만원 이상 구매 시 무료배송</span>
                 </p>
               </div>
             </div>
           </div>
           <!-- 상품소개/브랜드 -->
           <!-- 탭 버튼 -->
-          <div class="tab-container">
-            <div class="tab-container-line">
-              <button class="tab-button">상품 설명</button>
+          <div class="detile-tab-container">
+            <div class="detile-tab-container-line">
+              <button class="detile-tab-button">상품 설명</button>
             </div>
-            <div class="tab-container-line">
-              <button class="tab-button">브랜드 소개</button>
+            <div class="detile-tab-container-line">
+              <button class="detile-tab-button">브랜드 소개</button>
             </div>
           </div>
 
           <!-- 상품 설명 탭 내용 -->
-          <div class="tab-content" id="description">
+          <div class="detile-tab-content" id="detile-description">
             <!-- 이미지 기본 표시 (일부만 보이게 설정) -->
-            <div class="image-container card">
+            <div class="detile-image-container detile-card">
               <img src="images/detail/suncatcher.png" alt="상품설명" id="mainImage" />
             </div>
-            <div class="image-brand card">
+            <div class="detile-image-brand detile-card">
               <img src="images/detail/suncatcher-brand.png" alt="브랜드" id="detailImage"  />
             </div>
-            <div class="content">
+            <div class="detile-content">
               <!-- 더보기 버튼 -->
               <button id="loadMoreImageBtn" onclick="toggleMoreImage()">더보기</button>
             </div>
